<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Student_RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="118dp"
        android:layout_height="128dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="100dp"
                android:text="@string/mindease"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/student_registration"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/studentID"
                android:layout_width="345dp"
                android:layout_height="42dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:hint="@string/id"
                android:textColorHint="#808080"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/stuNameRes"
                android:layout_width="345dp"
                android:layout_height="42dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/studentID" />

            <EditText
                android:id="@+id/stuAgeRes"
                android:layout_width="345dp"
                android:layout_height="42dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:hint="@string/age"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stuNameRes" />

            <EditText
                android:id="@+id/stuGenderRes"
                android:layout_width="345dp"
                android:layout_height="42dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:hint="@string/gender"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stuAgeRes" />

            <EditText
                android:id="@+id/stuEmailRes"
                android:layout_width="345dp"
                android:layout_height="42dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stuGenderRes" />

            <EditText
                android:id="@+id/stuUnameRes"
                android:layout_width="345dp"
                android:layout_height="42dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stuEmailRes" />

            <EditText
                android:id="@+id/stuPassRes"
                android:layout_width="345dp"
                android:layout_height="42dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stuUnameRes" />

            <Button
                android:id="@+id/studentButt"
                android:layout_width="144dp"
                android:layout_height="35dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_button"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stuPassRes" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>