<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Register_AdminActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="118dp"
                android:layout_height="128dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:importantForAccessibility="no"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.024"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="100dp"
                android:text="@string/mindease"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/student_registration"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/adminID"
                android:layout_width="345dp"
                android:layout_height="42dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:hint="@string/employment_id"
                android:textColorHint="#808080"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/adminNameRes"
                android:layout_width="345dp"
                android:layout_height="42dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adminID" />

            <EditText
                android:id="@+id/adminAgeRes"
                android:layout_width="345dp"
                android:layout_height="42dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:hint="@string/age"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adminNameRes" />

            <EditText
                android:id="@+id/adminGenderRes"
                android:layout_width="345dp"
                android:layout_height="42dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:hint="@string/gender"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adminAgeRes" />

            <EditText
                android:id="@+id/adminEmailRes"
                android:layout_width="345dp"
                android:layout_height="42dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:hint="Email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adminGenderRes" />

            <EditText
                android:id="@+id/adminUnameRes"
                android:layout_width="345dp"
                android:layout_height="42dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:hint="Username"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adminEmailRes" />

            <EditText
                android:id="@+id/adminPassRes"
                android:layout_width="345dp"
                android:layout_height="42dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adminUnameRes" />

            <Button
                android:id="@+id/adminButt"
                android:layout_width="144dp"
                android:layout_height="35dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_button"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adminPassRes" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>